[gd_scene format=3 uid="uid://dc2xr4b341wrp"]

[ext_resource type="Script" uid="uid://bmp8gy81s7bm4" path="res://scripts/damage_component.gd" id="1_c2rab"]

[node name="DamageComponent" type="Area2D" unique_id=1322757197]
collision_layer = 65792
collision_mask = 65792
script = ExtResource("1_c2rab")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
